@@ -4,8 +4,8 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
 import java.util.List;
@@ -14,29 +14,32 @@ import java.util.stream.Collectors;
 @Configuration
 public class CorsConfig {
 
-    private final List<String> allowedOrigins;
+    /**
+     * Spring Security {@code http.cors()}는 이 빈을 사용한다. {@code CorsFilter}만 두면
+     * 필터 순서 때문에 프리플라이트(OPTIONS)에 CORS 헤더가 안 붙을 수 있다.
+     */
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource(
+            @Value("${app.cors.allowed-origins:}") String allowedOriginsCsv) {
 
-    public CorsConfig(@Value("${app.cors.allowed-origins:}") String allowedOriginsCsv) {
-        this.allowedOrigins = Arrays.stream(allowedOriginsCsv.split(","))
+        List<String> allowedOrigins = Arrays.stream(allowedOriginsCsv.split(","))
                 .map(String::trim)
                 .filter(s -> !s.isEmpty())
                 .collect(Collectors.toList());
-    }
 
-    @Bean
-    public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        if (allowedOrigins.isEmpty()) return new CorsFilter(source);
+        if (allowedOrigins.isEmpty()) {
+            return source;
+        }
 
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowedOrigins(allowedOrigins);
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
 
         source.registerCorsConfiguration("/**", config);
-        return new CorsFilter(source);
+        return source;
     }
 }
-
